<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/butBackBookCriteria"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/tvPremisesUlCriteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premisesUl"
        android:textColor="@color/continue_background"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDeportmentListCriteria"
        tools:listitem="@layout/list_item_deportment"
        tools:itemCount="5"
        android:layout_width="337dp"
        android:layout_height="260dp"
        android:background="@drawable/background_continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPremisesUlCriteria"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/butYet"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_caretcircledown"
        app:layout_constraintBottom_toBottomOf="@id/rvDeportmentListCriteria"
        app:layout_constraintLeft_toLeftOf="@id/rvDeportmentListCriteria"
        app:layout_constraintRight_toRightOf="@id/rvDeportmentListCriteria"
        app:layout_constraintTop_toTopOf="@id/rvDeportmentListCriteria"
        app:layout_constraintVertical_bias="0.95" />

    <RadioGroup
        android:id="@+id/rgCriteria"
        android:layout_width="141dp"
        android:layout_height="88dp"
        android:background="@drawable/background_continue_button"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/rvDeportmentListCriteria"
        app:layout_constraintTop_toBottomOf="@id/rvDeportmentListCriteria"
        app:layout_constraintVertical_bias="0.1">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/labelName"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/labelFloor"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/labelNumCabinet"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/edSearchOfficeInUlCriteria"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:background="@drawable/background_description_problem"
        android:hint="@string/edSerch"
        android:paddingLeft="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgCriteria"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:paddingLeft="8dp"
        android:src="@drawable/ic_magnifyingglass"
        app:layout_constraintBottom_toBottomOf="@id/edSearchOfficeInUlCriteria"
        app:layout_constraintLeft_toLeftOf="@id/edSearchOfficeInUlCriteria"
        app:layout_constraintTop_toTopOf="@id/edSearchOfficeInUlCriteria" />

    <Button
        android:id="@+id/butParamCriteria"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/background_button_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@id/edSearchOfficeInUlCriteria"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgCriteria"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="2dp"
        android:src="@drawable/ic_sliders"
        app:layout_constraintBottom_toBottomOf="@id/butParamCriteria"
        app:layout_constraintLeft_toLeftOf="@id/butParamCriteria"
        app:layout_constraintRight_toRightOf="@id/butParamCriteria"
        app:layout_constraintTop_toTopOf="@id/butParamCriteria" />
</androidx.constraintlayout.widget.ConstraintLayout>